fix deploy script

--- a/app/assets/stylesheets/store/emcommeast.css.scss
+++ b/app/assets/stylesheets/store/emcommeast.css.scss
@@ -4,7 +4,7 @@ body{
 }
 
 #header{
-  background: image-url("store/bg.jpg");
+  background: #102634 image-url("store/bg.jpg");
   padding: 1em;
 }
 
