--- a/app/assets/stylesheets/store/emcommeast.css.scss
+++ b/app/assets/stylesheets/store/emcommeast.css.scss
@@ -60,3 +60,11 @@ div.container{
     display:none 
   }
 }
+
+
+#cart-form div[data-hook="product_price"], 
+#inside_product_cart_form .alpha{ width: 200px}
+
+#ad_hoc_options{
+  dt{ width: 33%}
+}
